Data sent and saved to DB (Patient add, Modality add, Location add). Forms remade

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
     <body>
         <ul class="nav">
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'patientDetail' %}">Patienten</a></li> 
-            <li><a href="{% url 'modality' %}">Modalitäten</a></li> 
+            <li><a href="{% url 'patients' %}">Patienten</a></li> 
+            <li><a href="{% url 'modalities' %}">Modalitäten</a></li> 
             <li><a href="{% url 'administration' %}">Administration</a> </li>
         </ul> 
         {% block content %}
