--- a/templates/administration/create.html
+++ b/templates/administration/create.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Neuer Standord hinzufügen</h2>
 
-<form>
+<form method='POST'> {% csrf_token %}
     {{ form.as_p}}
     <input type =  'submit' value ='Save'/>
 </form>
