--- a/templates/modality/create.html
+++ b/templates/modality/create.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2> Neue Modalität hinzufügen</h2>
 
-<form>
+<form method='POST'> {% csrf_token %}
     {{ form.as_p}}
     <input type='submit' value ='Save'/>
 </form>
