--- a/templates/patient/detail.html
+++ b/templates/patient/detail.html
@@ -2,8 +2,14 @@
 
 {% block content %}
 
-<h2>Patient Information detail</h2>
+<h2>Patienten Liste</h2>
 
+<p> {{ object.title}}</p>
 <p> {{ object.name}}</p>
- 
+<p> {{ object.vorname}}</p>
+<p> {{ object.geburtsdatum}}</p>
+<p> {{ object.adresse}}</p>
+<p> {{ object.plz}}</p>
+<p> {{ object.sprache}}</p>
+
 {% endblock %}
