User interface part 1

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,35 @@
 
 <h3>Wilkommen bei curaMED von Swisscom</h3>
 
-<a href="https://www.w3schools.com">
-    This is a link</a> 
+<div class="card-deck">
+   
+      <div class="card border-info mb-3 w-65">
+        <div class="card-body">
+          <h5 class="card-title">Patienten</h5>
+          
+          <a href="#Patienten liste" button type="button" class="btn btn-link btn-sm">Liste Patienten</a>
+          <a href="#Patienten suche" button type="button" class="btn btn-link btn-sm">Patient suchen</a>
+        </div>
+      </div>
+  
+      <div class="card border-info mb-3 w-65">
+          <div class="card-body">
+            <h5 class="card-title">Modalitäten</h5>
+            <a href="#Standort" button type="button" class="btn btn-link btn-sm">Standort</a>
+            <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
+          </div>
+        </div>
+       
+     
+      <div class="card border-info mb-3 w-65">
+        <div class="card-body">
+          <h5 class="card-title">Administration</h5>
+          <a href="#Neue Modalität hinzufügen" button type="button" class="btn btn-link btn-sm">Neue Modalität hinzufügen</a>
+          <a href="#Modalität status" button type="button" class="btn btn-link btn-sm">Modalität status</a>
+        </div>
+      </div>
+    </div>
+   
     
 {% endblock %}
 
