--- a/templates/base.html
+++ b/templates/base.html
@@ -4,23 +4,51 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+        {% load static %}
         <!-- Bootstrap CSS -->
         
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     
         <title> curaMED</title>
-        {% load static %}
+        
 
-        <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
     </head>
 
     <body>
-        <ul class="nav">
-            <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'patients' %}">Patienten</a></li> 
-            <li><a href="{% url 'modalities' %}">Modalitäten</a></li> 
-            <li><a href="{% url 'administration' %}">Administration</a> </li>
+
+        <div class="card text-center">
+            <div class="card-header">
+              <ul class="nav nav-tabs card-header-tabs">
+                <li class="nav-item">
+                    <a class="nav-link home" href="{% url 'home' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                  <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Patienten
+                  </button>
+                    <!-- <a class="nav-link patients" href="{% url 'patients' %}">Patienten</a> -->
+                    <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
+                      <a class="dropdown-item" href="{% url 'patients' %}">Liste Patienten</a>
+                      <a class="dropdown-item" href="#">Patient suchen</a>
+                     </div> 
+                  </li>
+                  <li class="nav-item">
+                     
+                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Modalitäten
+                    </button>
+                      <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
+                        <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten liste</a>
+                        <a class="dropdown-item" href="#">Patienten importieren</a>
+                       </div> 
+                    </li>
+                  <li class="nav-item">
+                    <a class="nav-link administration" href="{% url 'administration' %}" tabindex="-1" aria-disabled="true">Administration</a>
+                  </li>
+                </ul>        
+            </div>    
+            
         </ul> 
         {% block content %}
         this code will be replaced. just like you, if you are not good at your job
