--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -5,8 +5,8 @@
 <h2>Lists of patients</h2>
 <br>
 {% for instance in object_list %}
-<div class="card" style="width: 25rem;">
-    <img src="..." class="card-img-top" alt="...">
+<div class="card border-info mb-3">
+    <img src="..." class="card-img-top" alt="the Patient image is here">
     <div class="card-body">
       <h5 class="card-title">{{instance.first_name}} {{ instance.second_name}}</h5>
       <h6 class="card-subtitle mb-2 text-muted">ID: {{instance.id}}</h6>
