--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<h3>Wilkommen bei curaMED von Swisscom</h3>
+<h3>Wilkommen bei curaMED</h3>
 
 <div class="card-deck">
    
@@ -11,16 +11,19 @@
         <div class="card-body">
           <h5 class="card-title">Patienten</h5>
           
-          <a href="#Patienten liste" button type="button" class="btn btn-link btn-sm">Liste Patienten</a>
+          <a href="#Patienten liste" button type="button" class="btn btn-link btn-sm">Patientenliste</a>
           <a href="#Patienten suche" button type="button" class="btn btn-link btn-sm">Patient suchen</a>
+          <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
         </div>
       </div>
   
       <div class="card border-info mb-3 w-65">
           <div class="card-body">
             <h5 class="card-title">Modalitäten</h5>
-            <a href="#Standort" button type="button" class="btn btn-link btn-sm">Standort</a>
-            <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
+            <a href="#Neue Modalität hinzufügen" button type="button" class="btn btn-link btn-sm">Neue Modalität</a>
+            <a href="#Modalität anzeigen" button type="button" class="btn btn-link btn-sm">Modalitäten anzeigen</a>
+            <a href="#Modalität entfernen" button type="button" class="btn btn-link btn-sm">Modalität entfernen</a>
+             
           </div>
         </div>
        
@@ -28,8 +31,9 @@
       <div class="card border-info mb-3 w-65">
         <div class="card-body">
           <h5 class="card-title">Administration</h5>
-          <a href="#Neue Modalität hinzufügen" button type="button" class="btn btn-link btn-sm">Neue Modalität hinzufügen</a>
-          <a href="#Modalität status" button type="button" class="btn btn-link btn-sm">Modalität status</a>
+          <a href="#Standort konfigurieren" button type="button" class="btn btn-link btn-sm">Standort konfigurieren</a>
+         
+          
         </div>
       </div>
     </div>
