--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -5,7 +5,7 @@
 <h2>Lists of patients</h2>
 <br>
 {% for instance in object_list %}
-<div class="card border-info mb-3">
+<div class="card border-info mb-3 w-50">
     <img src="..." class="card-img-top" alt="the Patient image is here">
     <div class="card-body">
       <h5 class="card-title">{{instance.first_name}} {{ instance.second_name}}</h5>
