avatar for patient

--- a/templates/home.html
+++ b/templates/home.html
@@ -38,6 +38,8 @@
       </div>
     </div>
    
-    
+    <nav class="navbar fixed-bottom navbar-light bg-light">
+      <h5 class="text-blue h4">Collapsed content</h5>
+    </nav>
 {% endblock %}
 
