--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,81 @@
-
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        {% load static %}
-        <!-- Bootstrap CSS -->
-        
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    
-        <title> curaMED</title>
-        
 
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-    </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% load static %}
+  <!-- Bootstrap CSS -->
 
-    <body>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-        <div class="card text-center">
-            <div class="card-header">
-              <ul class="nav nav-tabs card-header-tabs">
-                <li class="nav-item">
-                    <a class="nav-link home" href="{% url 'home' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                  <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Patienten
-                  </button>
-                    <!-- <a class="nav-link patients" href="{% url 'patients' %}">Patienten</a> -->
-                    <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
-                      <a class="dropdown-item" href="{% url 'patients' %}">Liste Patienten</a>
-                      <a class="dropdown-item" href="#">Patient suchen</a>
-                     </div> 
-                  </li>
-                  <li class="nav-item">
-                     
-                    <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Modalitäten
-                    </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
-                        <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten liste</a>
-                        <a class="dropdown-item" href="#">Patienten importieren</a>
-                       </div> 
-                    </li>
-                  <li class="nav-item">
-                    <a class="nav-link administration" href="{% url 'administration' %}" tabindex="-1" aria-disabled="true">Administration</a>
-                  </li>
-                </ul>        
-            </div>    
-            
-        </ul> 
-        {% block content %}
-        this code will be replaced. just like you, if you are not good at your job
-        {% endblock %}
+  <title> curaMED</title>
 
 
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>    
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+</head>
 
-        
-    </body>
+<body>
+
+  <div class="card text-center">
+    <div class="card-header">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link home" href="{% url 'home' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-link dropdown-toggle" type="button" id="dropdownPatientenButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Patienten
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
+            <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
+            <a class="dropdown-item" href="#">Patient suchen</a>
+            <a class="dropdown-item" href="#">Patienten importieren</a>
+          </div>
+        </li>
+        <li class="nav-item">
+
+          <button class="btn btn-link dropdown-toggle" type="button" id="dropdownModalityButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Modalitäten
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownModalityButton">
+            <a class="dropdown-item" href="#">Neue Modalität</a>
+            <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>
+            <a class="dropdown-item" href="#">Modalität entfernen</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-link dropdown-toggle" type="button" id="dropdownAdminButton" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            Administration
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownAdminButton">
+            <a class="dropdown-item" href="{% url 'administration' %}">Standort konfigurieren </a>
+
+        </li>
+      </ul>
+    </div>
+
+    </ul>
+    {% block content %}
+    this code will be replaced. just like you, if you are not good at your job
+    {% endblock %}
+
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+      crossorigin="anonymous"></script>
+
+     
+</body>
+
 </html>
