--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -5,10 +5,22 @@
 <h2>Lists of patients</h2>
 <br>
 {% for instance in object_list %}
-<div class="card border-info mb-3 w-50">
-    <img src="..." class="card-img-top" alt="the Patient image is here">
-    <div class="card-body">
-      <h5 class="card-title">{{instance.first_name}} {{ instance.second_name}}</h5>
+<div class="card border-info mb-3 w-100" >
+  <div class="card-body">
+  <div class="container">
+    <div class="row">
+      <div class = "card w-2">
+      <div class="col">
+        <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
+      </div>
+    </div>
+      <div class="col-15">
+        <h5 class="card-title">{{instance.first_name}} {{ instance.second_name}}</h5>
+      </div>
+    </div>
+  </div>
+    
+      
       <h6 class="card-subtitle mb-2 text-muted">ID: {{instance.id}}</h6>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">{{ instance.birthdate }}</li>
