--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html' %} 
-
+<!-- scoate din nav bar toate butoanele. pt ca deja mai ai butoane jos-->
 {% block content %}
 
 <h3>Wilkommen bei curaMED</h3>
@@ -39,7 +39,8 @@
     </div>
    
     <nav class="navbar fixed-bottom navbar-light bg-light">
-      <h5 class="text-blue h4">Collapsed content</h5>
+      <h6 class="text-blue h4">Kontakt: dumig1@bfh.ch</h6>
+      <h6 class="text-blue h4">Addresse: Quellgasse 21, 2502 Biel</h6>
     </nav>
 {% endblock %}
 
