--- a/templates/modality/modality_list.html
+++ b/templates/modality/modality_list.html
@@ -2,7 +2,14 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<h2>Lists of patients</h2>
+<h2>Lists of modalities</h2>
+<h1>bei pstienten: pat liste --> eine nutton für create neue radio auftrag
+--> new page hier die worklist erstellen
+fpr modalitäten brauchst noch die attribute dafür --> EINE form erstellen
+
+im bestehende workist anzeigen --> was steht drin? welche pat, zeit, modalitäte
+
+</h1>
 <br>
 
 {% for instance in object_list %}
