clean urls and buttons redirect

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,8 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
             <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
-            <a class="dropdown-item" href="#">Patient suchen</a>
+           
+            <a class="dropdown-item" href="#">Patient erstellen</a>
             <a class="dropdown-item" href="#">Patienten importieren</a>
           </div>
         </li>
