--- a/templates/home.html
+++ b/templates/home.html
@@ -1,46 +1,66 @@
 
-{% extends 'base.html' %} 
-<!-- scoate din nav bar toate butoanele. pt ca deja mai ai butoane jos-->
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% load static %}
+  <!-- Bootstrap CSS -->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+    integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+  <title> curaMED</title>
+
+
+  <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+</head>
+ 
 {% block content %}
+<nav class="navbar navbar-light">
+  <a class="navbar-brand" href="#">
+    <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">curaMED
+  
+  </a>
+</nav>
 
 <h3>Wilkommen bei curaMED</h3>
 
-<div class="card-deck">
+<div class="card-deck" style="width:auto">
    
-      <div class="card border-info mb-3 w-65">
-        <div class="card-body">
-          <h5 class="card-title">Patienten</h5>
-          
-          <a href="#Patienten liste" button type="button" class="btn btn-link btn-sm">Patientenliste</a>
-          <a href="#Patienten suche" button type="button" class="btn btn-link btn-sm">Patient suchen</a>
-          <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
-        </div>
-      </div>
-  
-      <div class="card border-info mb-3 w-65">
-          <div class="card-body">
-            <h5 class="card-title">Modalitäten</h5>
-            <a href="#Neue Modalität hinzufügen" button type="button" class="btn btn-link btn-sm">Neue Modalität</a>
-            <a href="#Modalität anzeigen" button type="button" class="btn btn-link btn-sm">Modalitäten anzeigen</a>
-            <a href="#Modalität entfernen" button type="button" class="btn btn-link btn-sm">Modalität entfernen</a>
-             
-          </div>
-        </div>
-       
-     
-      <div class="card border-info mb-3 w-65">
-        <div class="card-body">
-          <h5 class="card-title">Administration</h5>
-          <a href="#Standort konfigurieren" button type="button" class="btn btn-link btn-sm">Standort konfigurieren</a>
-         
-          
-        </div>
+  <div class="card border-info">
+    <div class="card-body">
+      <h5 class="card-title">Patienten</h5>
+      <a href="{% url 'patients' %}" button type="button" class="btn btn-link btn-sm">Patientenliste</a>
+      <!-- <a href="#Patienten suche" button type="button" class="btn btn-link btn-sm">Patient suchen</a>
+      pat suchen nicht mehr sondern auf gleichen seite wie pat liste-->
+      
+      <a href="#Patienten erstellen" button type="button" class="btn btn-link btn-sm">Patient erstellen</a>
+      <a href="#Patienten importieren" button type="button" class="btn btn-link btn-sm">Patienten importieren</a>
+    </div>
+  </div>
+
+  <div class="card border-info">
+      <div class="card-body">
+        <h5 class="card-title">Modalitäten</h5>
+        <a href="#Neue Modalität hinzufügen" button type="button" class="btn btn-link btn-sm">Neue Modalität</a>
+        <a href="{% url 'modalities' %}" button type="button" class="btn btn-link btn-sm">Modalitäten anzeigen</a>
+        <a href="/templates/modality/modality_delete.html" button type="button" class="btn btn-link btn-sm">Modalität entfernen</a>
       </div>
     </div>
-   
+  
+  <div class="card border-info">
+    <div class="card-body">
+      <h5 class="card-title">Administration</h5>
+      <a href=" {% url 'administration' %}" button type="button" class="btn btn-link btn-sm">Standort konfigurieren</a>
+    </div>
+  </div>
+</div>
+
     <nav class="navbar fixed-bottom navbar-light bg-light">
       <h6 class="text-blue h4">Kontakt: dumig1@bfh.ch</h6>
       <h6 class="text-blue h4">Addresse: Quellgasse 21, 2502 Biel</h6>
     </nav>
 {% endblock %}
-
+ 
