no argument pattern error fixed

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
   <div class="card text-center">
     <div class="card-header">
       <ul class="nav nav-tabs card-header-tabs">
+        <img src="/static/images/favicon.ico" width="30" height="30" alt="" loading="lazy">
         <li class="nav-item">
           <a class="nav-link home" href="{% url 'home' %}">Home</a>
         </li>
