--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-<h2>item</h2>
+<h2>Patient bearbeiten</h2>
+{{object.id}}
+{{object.title}}
+{{object.first_name}}
+{{object.second_name}}
+{{object.birthdate}}
+{{object.address}}
+{{object.code}}
+{{object.language}}
 
 {% endblock %}
