--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,18 @@
 
 
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+  integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+  crossorigin="anonymous"></script>
+
+ 
 </head>
 
 <body>
@@ -33,7 +45,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
             <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
            
-            <a class="dropdown-item" href="#">Patient erstellen</a>
+            <a class="dropdown-item" href="{% url 'patientCreate' %}">Patient erstellen</a>
             <a class="dropdown-item" href="#">Patienten importieren</a>
           </div>
         </li>
@@ -44,7 +56,7 @@
             Modalitäten
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownModalityButton">
-            <a class="dropdown-item" href="#">Neue Modalität</a>
+            <a class="dropdown-item" href="{% url 'modalityCreate' %}">Neue Modalität</a>
             <a class="dropdown-item" href="{% url 'modalities' %}">Modalitäten anzeigen</a>
             <a class="dropdown-item" href="#">Modalität entfernen</a>
           </div>
@@ -55,7 +67,8 @@
             Administration
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownAdminButton">
-            <a class="dropdown-item" href="{% url 'administration' %}">Standort konfigurieren </a>
+            <a class="dropdown-item" href="{% url 'locationCreate' %}">Standort konfigurieren </a>
+            <a class="dropdown-item" href="{% url 'administration' %}">Standortliste</a>
 
         </li>
       </ul>
@@ -67,17 +80,7 @@
     {% endblock %}
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-      crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-      integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-      crossorigin="anonymous"></script>
-
-     
+   
 </body>
 
 </html>
