--- a/templates/patient/patient_create.html
+++ b/templates/patient/patient_create.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h2>Neuer Patient hinzufügen</h2>
 
-<form method='POST'> {% csrf_token %}
+<form action = '.' method='POST'> {% csrf_token %}
     {{ form.as_p }}
     <input type='submit' value ='Save'/>
 </form>
