--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class = "card w-2">
         <div class="col">
-          <img src="/static/images/batman.png" class="card-img-top" width="55" height="45">
+          <img src="/static/images/smart-home.png" class="card-img-top" width="55" height="45">
         </div>
       </div>
         <div class="col-15">
