--- a/templates/base.html
+++ b/templates/base.html
@@ -14,18 +14,18 @@
 
 
   <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.css' %}">
-  
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-  integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-  crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
-  integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
-  crossorigin="anonymous"></script>
 
- 
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
+    integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
+    crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -44,7 +44,7 @@
           </button>
           <div class="dropdown-menu" aria-labelledby="dropdownPatientenButton">
             <a class="dropdown-item" href="{% url 'patients' %}">Patientenliste</a>
-           
+
             <a class="dropdown-item" href="{% url 'patientCreate' %}">Patient erstellen</a>
             <a class="dropdown-item" href="#">Patienten importieren</a>
           </div>
@@ -75,12 +75,13 @@
     </div>
 
     </ul>
+    <div class="container-md"> 
     {% block content %}
     this code will be replaced. just like you, if you are not good at your job
     {% endblock %}
+    </div>
 
 
-   
 </body>
 
 </html>
