--- a/templates/administration/location_list.html
+++ b/templates/administration/location_list.html
@@ -8,7 +8,7 @@
 <h2>Addresse konfigurieren</h2>
 <br>
 
-{% for object in object_list %}
+{% for object in object_list reversed %}
 <div class="card border-info mb-3 w-100" >
     <div class="card-body">
     <div class="container">
