--- a/templates/patient/patient_list.html
+++ b/templates/patient/patient_list.html
@@ -2,6 +2,7 @@
 {% extends 'base.html' %} 
 
 {% block content %}
+ 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <form class="form-inline my-2 my-lg-0" action ="# patientSearch " method="GET">
       <input class="form-control mr-sm-2" type="text" 
@@ -16,7 +17,7 @@
 
 <h2>Patientenliste</h2>
 <br>
-{% for instance in object_list %}
+{% for instance in object_list reversed %}
 <div class="card border-info mb-3 w-100" >
   <div class="card-body">
   <div class="container">
