patient update options response

--- a/templates/patient/patient_detail.html
+++ b/templates/patient/patient_detail.html
@@ -18,16 +18,10 @@
                             <label>Geschlecht: </label>
                         </div>
                         <div class="col">
-                            <div class="dropdown">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" 
-                                id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Geschlecht
-                                  </button>
-                                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                  <a class="dropdown-item" value="male">Herr</a>
-                                  <a class="dropdown-item" value="female">Frau</a>
-                                </div>
-                            </div>
+                            <select name = 'title' id = 'id_title'>
+                                <option value="male"> Herr</option>
+                                <option value="female"> Frau</option>
+                            </select>
                         </div>
                     </div>
                 </li>
